kubernetes/apps/selfhosted/dococd/external/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dococd
  labels:
    name: dococd
spec:
  hostnames:
    - dococd.aresu.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: dococd
      matches:
        - path:
            type: PathPrefix
            value: /
